--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Friends & Aliens Records</title>
+	<title>No Love Songs</title>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="image_src" href="https://ibb.co/MsgyYXL">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/index.css">
