--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 
 <head>
     <meta charset="UTF-8">
+	<meta property=’og:title’ content='FRIENDS & ALIENS RECORDS'/>
+	<meta property=’og:image’ content='https://ibb.co/MsgyYXL’/>
+	<meta property=’og:description’ content='Independent rock record label in New York City.'/>
+	<meta property=’og:url’ content='friendsandaliensrecords.com'/>
+	<meta property='og:image:width' content='1080' />
+	<meta property='og:image:height' content='1080' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>No Love Songs</title>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="image_src" href="https://ibb.co/MsgyYXL">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/index.css">
