--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property=’og:title’ content='FRIENDS & ALIENS RECORDS'/>
-	<meta property=’og:image’ content='https://ibb.co/MsgyYXL’/>
-	<meta property=’og:description’ content='Independent rock record label in New York City.'/>
+	<meta property=’og:image’ content='https://ibb.co/MsgyYXL'/>
+	<meta property=’og:description’ content='Independent rock record label in New York City'/>
 	<meta property=’og:url’ content='friendsandaliensrecords.com'/>
 	<meta property='og:image:width' content='1080' />
 	<meta property='og:image:height' content='1080' />
