--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:url" content="friendsandaliensrecords.com"/>
 	<meta property="og:image:width" content="1080" />
 	<meta property="og:image:height" content="1080" />
-	<title>No Love Songs</title>
+	<title>Friends & Aliens Records</title>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -47,7 +47,7 @@
 			</div>
 			
 		<div class="header-main-sm">
-			<a href="https://www.facebook.com/friendsandaliensrecords" target="_blank"><div class="header-main-sm-fb"></div></a>
+			<a href="https://www.youtube.com/@FriendsAndAliensRecords" target="_blank"><div class="header-main-sm-yt"></div></a>
 			<a href="https://www.instagram.com/friendsandaliens" target="_blank"><div class="header-main-sm-in"></div></a>
 		</div>
 	</header>
