--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<div class="header-main-sm">
 			<a href="https://www.youtube.com/@FriendsAndAliensRecords" target="_blank"><div class="header-main-sm-yt"></div></a>
 			<a href="https://www.instagram.com/friendsandaliens" target="_blank"><div class="header-main-sm-in"></div></a>
+			<a href="https://open.spotify.com/artist/6nA0ty81LI7ByTl2pfJvsf?si=2nm3ohXmSvGIaPXh0Z6-qQ" target="_blank"><div class="header-main-sm-sp"></div></a>
 		</div>
 	</header>
 
