--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									without click tracks. 
 									<br> <br> The music business doesn't have to be a lonely place. Let's go far together.
 									<br> <br>
-								<a href="mailto:friendsandaliensrecords@gmail.com">REACH OUT</a>
+								<a href="https://www.etsy.com/shop/FriendsAndAliens">BUY A TSHIRT</a>
 							</div>
 						<div class="index-about-skill"></div>
 			</div>
