--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			</div>
 			
 		<div class="header-main-sm">
+			<a href="https://friendsandaliens.bandcamp.com/" target="_blank"><div class="header-main-sm-bc"></div></a>
 			<a href="https://www.youtube.com/@FriendsAndAliensRecords" target="_blank"><div class="header-main-sm-yt"></div></a>
 			<a href="https://www.instagram.com/friendsandaliens" target="_blank"><div class="header-main-sm-in"></div></a>
 			<a href="https://open.spotify.com/artist/4w7ir3LzDzxsNi9tPuA4aA?si=RXx2Mf45Qnq71MFf5u04Hw" target="_blank"><div class="header-main-sm-sp"></div></a>
